@@ -2,4 +2,4 @@
  * removed efuns. Feel free to use some or all of them. */
 
 #include "cat.c"
-
+#include "hash.c"
